# helios

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  linux.yml  macos.yml  rust.yml  windows.yml
crates/helios/: Cargo.toml  build.rs  usage.txt
crates/helios-build/: Cargo.toml
crates/helios-build/src/: lib.rs
crates/helios-diagnostics/: Cargo.toml
crates/helios-diagnostics/src/: diagnostic.rs  files.rs  lib.rs  reporter.rs  span.rs
crates/helios-driver/: Cargo.toml
crates/helios-driver/src/: lib.rs
crates/helios-formatting/: Cargo.toml
crates/helios-formatting/src/: lib.rs
crates/helios-ide/: Cargo.toml
crates/helios-ide/src/: lib.rs
crates/helios-ls/: Cargo.toml  README.md  usage.txt
crates/helios-ls/src/: connection.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs  state.rs
crates/helios-ls/src/server/: dispatcher.rs  handler.rs  handlers.rs
crates/helios-ls/src/server/handler/: notification.rs  request.rs
crates/helios-ls/src/server/handlers/: notifications.rs  requests.rs
crates/helios-parser/: Cargo.toml
crates/helios-parser/src/: cursor.rs  grammar.rs  lexer.rs  lib.rs  message.rs  parser.rs
crates/helios-parser/src/grammar/: decl.rs  expr.rs
crates/helios-parser/src/parser/: error.rs  event.rs  expr.rs  marker.rs  sink.rs  source.rs
crates/helios-query/: Cargo.toml
crates/helios-query/src/: cancel.rs  input.rs  interner.rs  lib.rs  location.rs
crates/helios-repl/: Cargo.toml
crates/helios-repl/src/: lib.rs
crates/helios-syntax/: Cargo.toml
crates/helios-syntax/src/: human.rs  lang.rs  lib.rs  repr.rs
crates/helios/src/: build.rs  lib.rs  main.rs  repl.rs
crates/koi/: Cargo.toml  usage.txt
crates/koi-actor/: Cargo.toml
crates/koi-actor/src/: lib.rs
crates/koi-arena/: Cargo.toml
crates/koi-arena/src/: lib.rs
crates/koi-build/: Cargo.toml
crates/koi-build/src/: lib.rs
crates/koi-driver/: Cargo.toml
crates/koi-driver/src/: diagnostic.rs  lib.rs  source.rs
crates/koi-driver/src/parser/: lexer.rs  mod.rs  token.rs
crates/koi-driver/src/parser/tests/: lexer.rs
crates/koi-driver/src/parser/tests/lexer/: keywords.rs  macros.rs  mod.rs  symbols.rs
crates/koi-driver/src/parser/tests/lexer/literals/: characters.rs  floats.rs  integers.rs  mod.rs  strings.rs
crates/koi-ide/: Cargo.toml
crates/koi-ide-new/: Cargo.toml
crates/koi-ide-new/src/: lib.rs
crates/koi-ide/src/: actors.rs  lib.rs
crates/koi-ide/src/actors/: mod.rs  receiver.rs  responder.rs
crates/koi-parser/: Cargo.toml
crates/koi-parser/src/: cursor.rs  decl.rs  expr.rs  lexer.rs  lib.rs  new_parser.rs  parser.rs  reporter.rs  source.rs  token.rs
crates/koi-parser/src/parser/: event.rs  expr.rs  mod.rs  sink.rs  source.rs
crates/koi-parser/src/tests/: mod.rs
crates/koi-parser/src/tests/lexer/: expressions.rs  keywords.rs  macros.rs  mod.rs  symbols.rs
crates/koi-parser/src/tests/lexer/literals/: characters.rs  floats.rs  integers.rs  strings.rs
crates/koi-query/: Cargo.toml
crates/koi-query/src/: cancel.rs  input.rs  lib.rs
crates/koi-repl/: Cargo.toml
crates/koi-repl/src/: lib.rs
crates/koi-syntax/: Cargo.toml
crates/koi-syntax-new/: Cargo.toml
crates/koi-syntax-new/src/: cache.rs  errors.rs  lexer.rs  lib.rs  parser.rs  source.rs
crates/koi-syntax-new/src/cache/: mod.rs  node_cache.rs  token_cache.rs
crates/koi-syntax-new/src/tree/: factory.rs  factory_new.rs  mod.rs  node.rs  token.rs
crates/koi-syntax-new/src/tree/factory_new/: mod.rs
crates/koi-syntax-old/: Cargo.toml
crates/koi-syntax-old/src/: lexer.rs  lib.rs  parser.rs  token.rs
crates/koi-syntax-old/src/node/: mod.rs
crates/koi-syntax-old/src/node/decl/: function_decl.rs  type_decl.rs
crates/koi-syntax-old/src/node/expr/: binary_expr.rs  block_expr.rs  error_expr.rs  grouped_expr.rs  identifier_expr.rs  if_expr.rs  skipped_expr.rs  unary_expr.rs  unexpected_expr.rs  unimplemented_expr.rs
crates/koi-syntax-old/src/tests/: mod.rs
crates/koi-syntax-old/src/tests/lexer/: keywords.rs  macros.rs  mod.rs
crates/koi-syntax-old/src/tests/lexer/literals/: floats.rs  mod.rs
crates/koi-syntax-old/src/tests/parser/: macros.rs  mod.rs
crates/koi-syntax/src/: cache.rs  decl.rs  errors.rs  expr.rs  lang.rs  lexer.rs  lib.rs  parser.rs  source.rs  syntax.rs  token.rs
crates/koi-syntax/src/node/: decl.rs  expr.rs  mod.rs
crates/koi-syntax/src/node/decl/: mod.rs  module_decl.rs
crates/koi-syntax/src/node/expr/: if_expr.rs  literal_expr.rs  missing_expr.rs  mod.rs  unexpected_expr.rs
crates/koi-syntax/src/node_/: decl.rs  mod.rs
crates/koi-syntax/src/node_/decl/: block_decl.rs  function_decl.rs  mod.rs  module_decl.rs  type_decl.rs
crates/koi-syntax/src/node_/expr/: binary_expr.rs  block_expr.rs  error_expr.rs  grouped_expr.rs  identifier_expr.rs  if_expr.rs  literal_expr.rs  local_binding_expr.rs  missing_expr.rs  mod.rs  unary_expr.rs  unexpected_expr.rs  unimplemented_expr.rs
crates/koi-syntax/src/parser/: expr.rs  mod.rs
crates/koi-syntax/src/tests/lexer/: keywords.rs  macros.rs  symbols.rs
crates/koi-syntax/src/tests/lexer/literals/: floats.rs  integers.rs
crates/koi-syntax/src/tests/parser/: expressions.rs  macros.rs
crates/koi-syntax/src/tree/: mod.rs  token.rs
crates/koi-syntax/src/tree/node/: mod.rs
crates/koi-syntax/src/tree/node/decl/: block_decl.rs  function_decl.rs  mod.rs  module_decl.rs  type_decl.rs
crates/koi-syntax/src/tree/node/expr/: binary_expr.rs  block_expr.rs  error_expr.rs  grouped_expr.rs  identifier_expr.rs  if_expr.rs  literal_expr.rs  local_binding_expr.rs  missing_expr.rs  mod.rs  skipped_expr.rs  unary_expr.rs  unexpected_expr.rs  unimplemented_expr.rs
crates/koi/src/: main.rs
docs/: grammar-draft.md  grammar.html  grammar.md  style.css
