[package]
name = "helios-build"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
flume = "0.10.0"
helios-diagnostics = { version = "0.1.0", path = "../helios-diagnostics" }
helios-parser = { version = "0.2.0", path = "../helios-parser" }
