[package]
name = "helios-diagnostics"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2021"

[dependencies]
colored = "2.0.0"
helios-formatting = { version = "0.2.0", path = "../helios-formatting" }
text-size = "1.1.0"
textwrap = { version = "0.13.1", features = ["terminal_size"] }
