[package]
name = "helios-ls"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.0"
env_logger = "0.7.1"
log = "0.4.11"
lsp-types = "0.86.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
