[package]
name = "helios-parser"
version = "0.2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helios-diagnostics = { version = "0.1.0", path = "../helios-diagnostics" }
helios-syntax = { version = "0.2.0", path = "../helios-syntax" }
expect-test = "1.0.1"
rowan = "0.10.0"
unicode-xid = "0.2.1"
