[package]
name = "helios-parser"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
expect-test = "1.0.1"
helios-diagnostics = { version = "0.2.0", path = "../helios-diagnostics" }
helios-formatting = { version = "0.2.0", path = "../helios-formatting" }
helios-syntax = { version = "0.2.0", path = "../helios-syntax" }
rowan = "0.10.0"
text-size = "1.0.0"
unicode-xid = "0.2.1"
