[package]
name = "helios-parser"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2021"

[dependencies]
drop_bomb = "0.1.5"
expect-test = "1.2.2"
helios-diagnostics = { version = "0.2.0", path = "../helios-diagnostics" }
helios-formatting = { version = "0.2.0", path = "../helios-formatting" }
helios-syntax = { version = "0.2.0", path = "../helios-syntax" }
rowan = "0.15.3"
text-size = "1.1.0"
unicode-xid = "0.2.2"
