[package]
name = "helios-query"
version = "0.2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helios-syntax = { version = "0.2.0", path = "../helios-syntax" }
salsa = "0.14.4"
