[package]
name = "helios-query"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2021"

[dependencies]
helios-diagnostics = { version = "0.2.0", path = "../helios-diagnostics" }
helios-parser = { version = "0.2.0", path = "../helios-parser" }
salsa = "0.16.1"
