[package]
name = "helios"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
helios-build = { version = "0.2.0", path = "../helios-build" }
helios-repl = { version =  "0.2.2", path = "../helios-repl" }
log = "0.4.11"
