[package]
name = "helios"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"
publish = false
repository = "http://github.com/helios-lang/helios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
colored = "2.0.0"
env_logger = "0.7.1"
helios-diagnostics = { version =  "0.2.0", path = "../helios-diagnostics" }
helios-parser = { version = "0.2.0", path = "../helios-parser" }
log = "0.4.14"
