[package]
name = "helios"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2021"
publish = false
repository = "http://github.com/helios-lang/helios"

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.0"
helios-diagnostics = { version = "0.2.0", path = "../helios-diagnostics" }
helios-parser = { version = "0.2.0", path = "../helios-parser" }
log = "0.4.14"
