[package]
name = "koi-ide"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi-syntax-old = { version = "0.1.0", path = "../koi-syntax-old" }
log = "0.4.11"
tokio = { version = "0.2.22", features = ["io-std"] }
tower-lsp = "0.13.2"
