[package]
name = "koi-parser"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi-syntax = { version = "0.1.0", path = "../koi-syntax" }
expect-test = "1.0.1"
rowan = "0.10.0"
unicode-xid = "0.2.1"
