[package]
name = "koi-query"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi-syntax-old = { version = "0.1.0", path = "../koi-syntax-old" }
salsa = "0.14.4"
