[package]
name = "koi-syntax-new"
version = "0.1.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi-arena = { version = "0.1.0", path = "../koi-arena" }
paste = "1.0.1"
unicode-xid = "0.2.0"
