[package]
name = "koi"
version = "0.1.5"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi-build = { version = "0.1.0", path = "../koi-build" }
koi-ide = { version =  "0.1.0", path = "../koi-ide" }
koi-repl = { version =  "0.1.0", path = "../koi-repl" }

log = "0.4.11"
env_logger = "0.7.1"
